[package]
name = "scrape_lemmy"
description = "A tool to scrape posts, comments, and users from a Lemmy instance."
authors = ["Josef Zoller <josef@walterzollerpiano.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-once-cell = "0.5.3"
async-recursion = "1.0.5"
async-trait = "0.1.74"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
csv = { git = "https://github.com/gootorov/rust-csv.git", branch = "serde-flatten" }
dotenv_codegen = "0.15.0"
futures = "0.3.29"
futures-core = "0.3.29"
governor = "0.6.0"
indexmap = "2.1.0"
indicatif = "0.17.7"
itertools = "0.11.0"
lemmy_api_common = "0.18.2"
ordinal = "0.3.2"
pin-project-lite = "0.2.13"
reqwest = "0.11.22"
scc = "2.0.3"
serde = { version = "1.0.190", features = ["rc"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
tokio = "1.33.0"
